# test_case_GO

./: .env  README.md  alembic.ini  crud.py  docker-compose.yml  main.py  pyproject.toml  queries.sql
alembic/: env.py
alembic/versions/: 4bf6b91d207e_add_column_to_rack_is_primary.py  59a47bcfc905_create_product_rack_table_association.py  80d5dfd34dc6_add_table_order_product_association.py  9ec220b6f534_create_racks_orders_assmblies_tables_.py  a8b11fb02aaf_add_table_order_product_association.py  b0e78da2bd3f_create_products_table.py  da435b14b1b9_create_order_product_association_table.py  ea869e93cba4_create_racks_orders_assmblies_tables_.py
core/: config.py
core/models/: __init__.py  assembly.py  db_helper.py  order.py  order_product_association.py  product.py  product_rack_association.py  rack.py
