[tool.poetry]
name = "test-case-go"
version = "0.1.0"
description = ""
authors = ["Dmitrii Turetskikh <tureckihdmitriq@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.27"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
